resolved issue with archive pages since alpha-3 (archive pages not centered)

--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ body {
 	width: 1016px;
 	padding-top: 15px;
 	padding-bottom: 30px;
+	margin: auto;
 	}
+.outer { text-align: center; margin: auto; width: 100%; }	
 
 .clear { clear: both; }
 
@@ -453,6 +455,7 @@ a:hover {
 	margin: 0px auto 0px;
 	padding: 0px 0px 0px 0px;
 	line-height: 18px;
+	margin: auto;
 	}
 	
 #content h1 {
@@ -649,13 +652,6 @@ blockquote {
 	font-size: 12px;
 	padding: 5px 0px 40px 0px;
 	margin: 0px;
-	}
-	
-.archive {
-	float: left;
-	width: 275px;
-	margin: 0px;
-	padding: 0px 0px 20px 0px;
 	}
 	
 .adsense-post {
@@ -1147,7 +1143,7 @@ div.aligncenter {
 	}
 
 div.reply { border-bottom: 1px dotted #ef69b5; padding-bottom: 10px; margin-bottom: 10px; }
-.avatar { float: left; margin: 10px 10px 10px 0;
+.avatar { float: left; margin: 10px 10px 10px 0; }
 
 	
 .topstripes {
